--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express-rate-limit": "^7.1.5",
     "express-session": "^1.18.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0"
@@ -23,6 +24,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.10.4",
     "@types/passport": "^1.0.17",
