--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@types/passport-linkedin-oauth2": "^1.5.6",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
@@ -19,8 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-linkedin-oauth2": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
