Email Authentication with Verification and Password Reset

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,5 +11,13 @@ SESSION_SECRET=your-session-secret-here
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 
+# Email Configuration
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
+EMAIL_FROM=noreply@yourapp.com
+
+# Frontend URL
+FRONTEND_URL=http://localhost:5173
+
 # Server
 PORT=3000
