--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0"
@@ -29,6 +30,7 @@
     "@types/express-session": "^1.18.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.10.4",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
