Profile Persistence and AI Career Path Planner

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,3 +21,7 @@ FRONTEND_URL=http://localhost:5173
 
 # Server
 PORT=3000
+
+# Grok AI Configuration
+GROK_API_KEY=your-grok-api-key-here
+GROK_API_URL=https://api.x.ai/v1
